# RacingGame

./: .gitignore  CMakeLists.txt  README.md  RacingGame  main.cpp
src/: CarModel.cpp  main.cpp  renderer.cpp  utils.cpp
src/include/: CarModel.h  renderable.h  renderer.h  singleton.h  utils.h
src/include/figures/: rectangle.h
tests/: test_box2d.cpp  test_sdl.cpp
